RESOLVED FIXED90006
[chromium] out-of-order assert in WebViewImpl setDeviceScaleFactor
https://bugs.webkit.org/show_bug.cgi?id=90006
Summary [chromium] out-of-order assert in WebViewImpl setDeviceScaleFactor
Robert Kroeger
Reported 2012-06-26 13:11:28 PDT
The patch for https://bugs.webkit.org/show_bug.cgi?id=88916 added code mis-positioned with respect to an assert such that the assert fires incorrectly when reducing the deviceScaleFactor.
Attachments
Patch (2.17 KB, patch)
2012-06-26 13:19 PDT, Robert Kroeger
no flags
Robert Kroeger
Comment 1 2012-06-26 13:19:17 PDT
Dana Jansens
Comment 2 2012-06-26 13:26:26 PDT
Comment on attachment 149594 [details] Patch LGTM
James Robinson
Comment 3 2012-06-26 13:43:14 PDT
Comment on attachment 149594 [details] Patch R=me is someone working on removing applyDefault...InCompositor() ?
Dana Jansens
Comment 4 2012-06-26 14:22:02 PDT
It needs to be renamed to applyDeviceScale... instead of applyDefaultDeviceScale... but the removal process is quite fuzzy in my mind, as I'm not sure what that would mean for Android right now.
WebKit Review Bot
Comment 5 2012-06-27 07:55:30 PDT
Comment on attachment 149594 [details] Patch Clearing flags on attachment: 149594 Committed r121342: <http://trac.webkit.org/changeset/121342>
WebKit Review Bot
Comment 6 2012-06-27 07:55:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.