[chromium] out-of-order assert in WebViewImpl setDeviceScaleFactor https://bugs.webkit.org/show_bug.cgi?id=90006

The assert in WebViewImpl::setDeviceScaleFactor should test for non-scaling
after we have set both m_DeviceScaleInCompositor and page()->deviceScaleFactor()
instead of in between.

Reviewed by James Robinson.

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::setDeviceScaleFactor):


Canonical link: https://commits.webkit.org/107911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121342 268f45cc-cd09-0410-ab3c-d52691b4dbfc